// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactPreferenceEntry renders ContactPreferenceEntry (all values) 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="How would you like to be contacted?"
  />
  <div
    className="wmrards-fe-group"
  >
    <div
      className="wmrards-fe-checkboxes null"
    >
      <div
        className="wmrards-fe-checkboxes__desc"
      >
        We'll use this to get in touch about your enquiry.
      </div>
      <FieldError
        text={null}
      />
      <Checkbox
        fieldName="emailContact"
        label="Email"
      />
      <div
        className="wmrards-m-l-xl wmrards-p-l-sm"
      >
        <TextInput
          error={null}
          fieldName="emailAddress"
          label={
            <React.Fragment>
              Email address
              <p>
                For example, name@example.com
              </p>
            </React.Fragment>
          }
        />
      </div>
      <Checkbox
        fieldName="phoneContact"
        label="Phone"
      />
      <div
        className="wmrards-m-l-xl wmrards-p-l-sm"
      >
        <TextInput
          error={null}
          fieldName="phoneNo"
          label={
            <React.Fragment>
              Phone number
              <p>
                For example, 07700900457
              </p>
            </React.Fragment>
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactPreferenceEntry renders ContactPreferenceEntry (no values) 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="How would you like to be contacted?"
  />
  <div
    className="wmrards-fe-group"
  >
    <div
      className="wmrards-fe-checkboxes null"
    >
      <div
        className="wmrards-fe-checkboxes__desc"
      >
        We'll use this to get in touch about your enquiry.
      </div>
      <FieldError
        text={null}
      />
      <Checkbox
        fieldName="emailContact"
        label="Email"
      />
      <Checkbox
        fieldName="phoneContact"
        label="Phone"
      />
    </div>
  </div>
</div>
`;

exports[`ContactPreferenceEntry renders ContactPreferenceEntry with error if present (all values) 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="How would you like to be contacted?"
  />
  <div
    className="wmrards-fe-group"
  >
    <div
      className="wmrards-fe-checkboxes undefined"
    >
      <div
        className="wmrards-fe-checkboxes__desc"
      >
        We'll use this to get in touch about your enquiry.
      </div>
      <FieldError
        text={null}
      />
      <Checkbox
        fieldName="emailContact"
        label="Email"
      />
      <div
        className="wmrards-m-l-xl wmrards-p-l-sm"
      >
        <TextInput
          fieldName="emailAddress"
          label={
            <React.Fragment>
              Email address
              <p>
                For example, name@example.com
              </p>
            </React.Fragment>
          }
        />
      </div>
      <Checkbox
        fieldName="phoneContact"
        label="Phone"
      />
      <div
        className="wmrards-m-l-xl wmrards-p-l-sm"
      >
        <TextInput
          error="Invalid"
          fieldName="phoneNo"
          label={
            <React.Fragment>
              Phone number
              <p>
                For example, 07700900457
              </p>
            </React.Fragment>
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactPreferenceEntry renders ContactPreferenceEntry with error if present (no values) 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 2 of 2"
  />
  <Question
    text="How would you like to be contacted?"
  />
  <div
    className="wmrards-fe-group"
  >
    <div
      className="wmrards-fe-checkboxes wmrards-fe-group--error"
    >
      <div
        className="wmrards-fe-checkboxes__desc"
      >
        We'll use this to get in touch about your enquiry.
      </div>
      <FieldError
        text="Required"
      />
      <Checkbox
        fieldName="emailContact"
        label="Email"
      />
      <Checkbox
        fieldName="phoneContact"
        label="Phone"
      />
    </div>
  </div>
</div>
`;
